Added Files for JWT

--- a/AlkemyWallet/appsettings.json
+++ b/AlkemyWallet/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "DevConnection": "",
     "ProdConnection": ""
+  },
+  "JWT": {
+    "ValidAudience": "",
+    "ValidIssuer": "",
+    "Secret": ""
   }
 }
